<resources>
    <string name="app_name">Moments.</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="sign_in_text">Sign In</string>
    <string name="or_text">or</string>
    <string name="need_account_text">Need an account?</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="register_text">Register</string>
    <string name="account_exists_text">Already have an account?</string>
    <string name="error_login_empty_input">Please enter your email / password</string>
    <string name="error_signin_failure">Something went wrong! Please try again later :(</string>
    <string name="error_password_confirm_mismatch">The passwords don\'t match!</string>
    <string name="setup_welcom_to">Welcome to</string>
    <string name="setup_name_question">Please tell me your name</string>
    <string name="hint_username">Username</string>
    <string name="get_started">Get Started</string>
    <string name="add_new_post">Add A New Post</string>
    <string name="logout">Logout</string>
    <string name="title_activity_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="journal_item_number_1">1.</string>
    <string name="journal_item_number_2">2.</string>
    <string name="journal_item_number_3">3.</string>
    <string name="journal_header_grateful_all_caps">I AM GRATEFUL FOR</string>
    <string name="no_image_text">Click here to add an image</string>
    <string name="journal_header_better_all_caps">WHAT COULD MAKE TODAY BETTER?</string>
    <string name="journal_header_amazing_things_all_caps">3 AMAZING THINGS HAPPENED TODAY</string>
    <string name="journal_header_todo_all_caps">WHAT WILL MAKE TODAY AMAZING?</string>
    <string name="journal_header_affirmations_all_caps">AFFIRMATIONS</string>
    <string name="unexpected_error">Unexpected error occurred. Please try again later!</string>
    <string name="image_load_finished">Loaded image</string>
    <string name="image_deletion_finished">Deleted image</string>
    <string name="journal_saved">Saved the journal</string>
    <string name="journal_edited">Edited the journal</string>
    <string name="journal_being_uploaded">Saving the journal… Please wait!</string>
    <string name="journal_being_loaded">Loading journals… Please wait!</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="journal_header_topic_1">I am grateful for</string>
    <string name="journal_header_topic_2">What will make today amazing?</string>
    <string name="journal_header_topic_3">Affirmations</string>
    <string name="journal_header_topic_4">3 amazing things happened today</string>
    <string name="journal_header_topic_5">What could make today better?</string>
    <string name="sample_journal_text_topic_1_item_1">This fresh morning</string>
    <string name="sample_journal_text_topic_1_item_2">The opportunities and the environment that have been given to me</string>
    <string name="sample_journal_text_topic_1_item_3">My ability and talent that led me till now</string>
    <string name="sample_journal_text_topic_2_item_1">Finishing detail activity building</string>
    <string name="sample_journal_text_topic_2_item_2">Sleeping early</string>
    <string name="sample_journal_text_topic_2_item_3">Praying and reading bible</string>
    <string name="sample_journal_text_topic_3_item_1">I will be the best developer</string>
    <string name="sample_journal_text_topic_3_item_2">I will be fit</string>
    <string name="sample_journal_text_topic_3_item_3">I will never be complacent</string>
    <string name="sample_journal_text_topic_4_item_1">I could finish the detail activity and building even more!</string>
    <string name="sample_journal_text_topic_4_item_2">Got a phone call from the employer</string>
    <string name="sample_journal_text_topic_4_item_3">Paper works are being processed smoothly</string>
    <string name="sample_journal_text_topic_5_item_1">Waking up early</string>
    <string name="sample_journal_text_topic_5_item_2">Quality hours of focusing on development</string>
    <string name="sample_journal_text_topic_5_item_3">Manifesting positivity</string>
    <string name="error_journal_load">Failed to load the journal. Please try again later!</string>
    <string name="journal_load_completed">Loaded journal</string>
    <string name="journal_update_completed">Updated journal</string>
    <string name="journal_deletion_completed">Deleted the journal</string>
    <string name="journal_loading">Loading journal…</string>
    <string name="journal_deleting">Deleting journal…</string>
    <string name="sdcard_not_mounted">External storage is not available</string>
    <string name="space_insufficient">Error: The device space is insufficient</string>
    <string name="image_saved">Saved image</string>
    <string name="edit_exit_warning_message">Are you sure to exit? The current inputs will be lost.</string>
    <string name="dialog_yes">YES</string>
    <string name="dialog_cancel">CANCEL</string>
    <string name="settings_category_theme">Theme</string>
    <string name="settings_category_notification">Notification</string>
    <string name="settings_item_title_enable_dark_theme">Enable Dark Theme</string>
    <string name="settings_item_key_enable_dark_theme">settings_key_enable_dark_theme</string>
    <string name="settings_item_title_enable_notifications">Enable Notifications</string>
    <string name="settings_item_key_enable_notifications">settings_key_enable_notifications</string>
    <string name="settings_item_title_enable_morning_notification">Enable Morning Notification</string>
    <string name="settings_item_key_enable_morning_notification">settings_key_enable_morning_notification</string>
    <string name="settings_item_title_morning_notif_time">Morning Notification Time</string>
    <string name="settings_item_key_morning_notif_time">settings_morning_notif_time</string>
    <string name="settings_item_title_enable_night_notification">Enable Night Notification</string>
    <string name="settings_item_key_enable_night_notification">settings_key_enable_night_notification</string>
    <string name="settings_item_title_night_notif_time">Night Notification Time</string>
    <string name="settings_item_key_night_notif_time">settings_night_notif_time</string>
    <string name="internet_unstable_upload">Unstable internet connection. Saved as draft :P!</string>
    <string name="internet_unstable_deletion">Unstable internet connection. Try again later!</string>
</resources>